Reduce intro section height

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div class="container-fluid"><img id="navbar-logo" class="img-thumbnail" src="assets/img/africaspocket_logo.png"></div>
             </nav>
         </section>
-        <section class="text-center d-flex align-items-center" id="intro">
+        <section class="text-center d-flex align-items-center py-5" id="intro">
             <div class="container">
                 <div class="row">
                     <div class="col-md-10 offset-md-1">
