Reduce intro section height

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <section id="top-section" class="py-4">
+    <section id="top-section">
         <section id="navigation">
             <nav class="navbar navbar-light navbar-expand-md">
                 <div class="container-fluid"><img id="navbar-logo" class="img-thumbnail" src="assets/img/africaspocket_logo.png"></div>
@@ -29,7 +29,7 @@
                     </div>
                 </div>
                 <div class="row justify-content-center">
-                    <div class="col-md-8 offset-md-1"><a class="btn active btn-block btn-preffered" role="button"><i class="fas fa-ticket-alt px-3"></i><strong>Yes! Watch This FREE Webinar Now</strong></a></div>
+                    <div class="col-md-8 offset-md-1"><a class="btn active btn-block btn-preffered my-2" role="button"><i class="fas fa-ticket-alt px-3"></i><strong>Yes! Watch This FREE Webinar Now</strong></a></div>
                 </div>
             </div>
         </section>
