Under emphasis in title

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-10 offset-md-1">
-                        <h2 id="intro-heading"><strong>See How Easily Africans Are Building Generational Wealth Using Simple Strategies That No One Tells You About...</strong><br></h2>
+                        <h2 id="intro-heading"><strong>See How Easily Africans Are Building <span style="text-decoration: underline;">Generational Wealth</span> Using Simple Strategies That No One Tells You About...</strong><br></h2>
                         <h4 id="sub-heading"><em>Even if you've never had a single investment or a fat bank account!&nbsp;</em></h4>
                     </div>
                 </div>
